@@ -1,4 +1,4 @@
-.\"	$Id: pkg_select.1,v 1.1.1.1 2005/02/21 10:38:07 imilh Exp $
+.\"	$Id: pkg_select.1,v 1.2 2005/02/22 09:52:41 imilh Exp $
 .\"
 .\" Copyright (c) 2005
 .\"      iMil <imil@gcu.info>.  All rights reserved.
